[tool.poetry]
name = "youtubedownloader"
version = "1.0.0"
description = "GUI YouTube Downloader"
authors = ["My <84212641+My-MC@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.57.0"
yt-dlp = "^2022.3.8"
cx-Freeze = "^6.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
